容器JVM规格变更工单