@@ -3,8 +3,11 @@ package com.baiyi.opscloud.util;
 import com.baiyi.opscloud.BaseUnit;
 import com.baiyi.opscloud.common.exception.common.OCException;
 import com.baiyi.opscloud.common.util.FunctionUtil;
+import com.baiyi.opscloud.workorder.helper.ContainerJvmSpecHelper;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.Test;
+
+import java.util.List;
 
 /**
  * @Author baiyi
@@ -13,6 +16,33 @@ import org.junit.jupiter.api.Test;
  */
 @Slf4j
 public class CTest extends BaseUnit {
+
+    // -Xms4096M -Xmx4096M -Xmn2048M -XX:MetaspaceSize=128M
+
+    public static final String JAVA_OPTS_TEST = """
+   
+                            -XX:MaxMetaspaceSize=256M -Xss256K
+                            -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDateStamps
+                            -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC
+                            -XX:+UseCMSInitiatingOccupancyOnly
+                            -XX:CMSInitiatingOccupancyFraction=80
+            """;
+
+    public static final String JAVA_OPTS_TEST2 = """
+                            -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDateStamps
+                            -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC
+                            -XX:+UseCMSInitiatingOccupancyOnly
+                            -XX:CMSInitiatingOccupancyFraction=80
+                            -XX:MaxMetaspaceSize=256M -Xss256K
+            """;
+
+    @Test
+    void ddd() {
+        // 2XLARGE
+        List<String> args = ContainerJvmSpecHelper.parse("XLARGE2", JAVA_OPTS_TEST2);
+        print(ContainerJvmSpecHelper.format(args));
+
+    }
 
     @Test
     void test() {
@@ -42,5 +72,7 @@ public class CTest extends BaseUnit {
                         () -> print("falseHandle-false")
                 );
     }
+
+
 
 }
